[project]
name = "blox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.14.1",
    "posit-sdk>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
]
