[project]
name = "blox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.14.1",
    "posit-sdk>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
    "basedpyright>=1.27.0",
]

[tool.ruff]
line-length = 180
target-version = "py313"

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
